Implemented task runner and related improvements

--- a/src/frontend/app.scss
+++ b/src/frontend/app.scss
@@ -33,6 +33,14 @@ $text: rgb(25, 27, 26);
     }
   }
 
+  .footer {
+    display: block;
+    width: 100%;
+    text-align: center;
+    opacity: .7;
+    font-size: .8em;
+  }
+
   .wizard {
     width: 100%;
     display: flex;
